app/globals.css
@import "tailwindcss";

@custom-variant dark (&:is(.dark *));

:root {
  --background: oklch(1.0000 0 0);
  --foreground: oklch(0.2697 0 0);
  --card: oklch(1.0000 0 0);
  --card-foreground: oklch(0.2697 0 0);
  --popover: oklch(1.0000 0 0);
  --popover-foreground: oklch(0.2697 0 0);
  --primary: oklch(0.5296 0.1863 258.1459);
  --primary-foreground: oklch(1.0000 0 0);
  --secondary: oklch(0.9686 0.0035 247.8590);
  --secondary-foreground: oklch(0.2697 0 0);
  --muted: oklch(0.9696 0 0);
  --muted-foreground: oklch(0.5547 0 0);
  --accent: oklch(0.9633 0.0154 255.0359);
  --accent-foreground: oklch(0.7448 0.1348 252.9400);
  --destructive: oklch(0.5409 0.2143 28.4788);
  --destructive-foreground: oklch(1.0000 0 0);
  --border: oklch(0.8610 0 0);
  --input: oklch(0.9234 0 0);
  --ring: oklch(0.5296 0.1863 258.1459);
  --chart-1: oklch(0.5296 0.1863 258.1459);
  --chart-2: oklch(0.6902 0.1481 162.3676);
  --chart-3: oklch(0.6683 0.1657 54.1917);
  --chart-4: oklch(0.5815 0.2477 311.2650);
  --chart-5: oklch(0.6057 0.2357 11.9397);
  --sidebar: oklch(0.9848 0 0);
  --sidebar-foreground: oklch(0.3705 0 0);
  --sidebar-primary: oklch(0.5296 0.1863 258.1459);
  --sidebar-primary-foreground: oklch(1.0000 0 0);
  --sidebar-accent: oklch(0.9498 0.0109 255.0143);
  --sidebar-accent-foreground: oklch(0.4430 0.1522 257.9241);
  --sidebar-border: oklch(0.9234 0 0);
  --sidebar-ring: oklch(0.5296 0.1863 258.1459);
  --font-sans: Afacad Flux, ui-sans-serif, sans-serif, system-ui;
  --font-serif: Noto Serif, ui-serif, serif;
  --font-mono: DM Mono, ui-monospace, monospace;
  --font-display: Bebas Neue, sans-serif;
  --radius: 0rem;
  --shadow-x: 0px;
  --shadow-y: 1px;
  --shadow-blur: 4px;
  --shadow-spread: 0px;
  --shadow-opacity: 0.05;
  --shadow-color: rgba(0, 0, 0, 0.1);
  --shadow-2xs: 0px 1px 4px 0px hsl(0 0% 0% / 0.03);
  --shadow-xs: 0px 1px 4px 0px hsl(0 0% 0% / 0.03);
  --shadow-sm: 0px 1px 4px 0px hsl(0 0% 0% / 0.05), 0px 1px 2px -1px hsl(0 0% 0% / 0.05);
  --shadow: 0px 1px 4px 0px hsl(0 0% 0% / 0.05), 0px 1px 2px -1px hsl(0 0% 0% / 0.05);
  --shadow-md: 0px 1px 4px 0px hsl(0 0% 0% / 0.05), 0px 2px 4px -1px hsl(0 0% 0% / 0.05);
  --shadow-lg: 0px 1px 4px 0px hsl(0 0% 0% / 0.05), 0px 4px 6px -1px hsl(0 0% 0% / 0.05);
  --shadow-xl: 0px 1px 4px 0px hsl(0 0% 0% / 0.05), 0px 8px 10px -1px hsl(0 0% 0% / 0.05);
  --shadow-2xl: 0px 1px 4px 0px hsl(0 0% 0% / 0.13);
  --tracking-normal: 0.0125em;
  --spacing: 0.25rem;
}

.dark {
  --background: oklch(0.1822 0 0);
  --foreground: oklch(0.9389 0 0);
  --card: oklch(0.2178 0 0);
  --card-foreground: oklch(0.9389 0 0);
  --popover: oklch(0.2697 0 0);
  --popover-foreground: oklch(0.9389 0 0);
  --primary: oklch(0.6756 0.1733 254.0364);
  --primary-foreground: oklch(0.2074 0.0625 252.2461);
  --secondary: oklch(0.3211 0 0);
  --secondary-foreground: oklch(0.9389 0 0);
  --muted: oklch(0.3008 0 0);
  --muted-foreground: oklch(0.7244 0 0);
  --accent: oklch(0.3148 0.1071 255.8956);
  --accent-foreground: oklch(0.8647 0.0685 252.0087);
  --destructive: oklch(0.5789 0.2217 27.8067);
  --destructive-foreground: oklch(1.0000 0 0);
  --border: oklch(0.3705 0 0);
  --input: oklch(0.3705 0 0);
  --ring: oklch(0.7782 0.1158 252.5545);
  --chart-1: oklch(0.7782 0.1158 252.5545);
  --chart-2: oklch(0.7750 0.1362 166.9055);
  --chart-3: oklch(0.8380 0.1371 82.1273);
  --chart-4: oklch(0.6863 0.1603 305.6668);
  --chart-5: oklch(0.6856 0.1898 352.1927);
  --sidebar: oklch(0.2156 0 0);
  --sidebar-foreground: oklch(0.8845 0 0);
  --sidebar-primary: oklch(0.7782 0.1158 252.5545);
  --sidebar-primary-foreground: oklch(0.2074 0.0625 252.2461);
  --sidebar-accent: oklch(0.3211 0 0);
  --sidebar-accent-foreground: oklch(0.9619 0 0);
  --sidebar-border: oklch(0.3411 0 0);
  --sidebar-ring: oklch(0.7782 0.1158 252.5545);
  --font-sans: Afacad Flux, ui-sans-serif, sans-serif, system-ui;
  --font-serif: Noto Serif, ui-serif, serif;
  --font-mono: DM Mono, ui-monospace, monospace;
  --radius: 0rem;
  --shadow-x: 0px;
  --shadow-y: 2px;
  --shadow-blur: 6px;
  --shadow-spread: 0px;
  --shadow-opacity: 0.15;
  --shadow-color: rgba(0, 0, 0, 0.4);
  --shadow-2xs: 0px 2px 6px 0px hsl(0 0% 0% / 0.07);
  --shadow-xs: 0px 2px 6px 0px hsl(0 0% 0% / 0.07);
  --shadow-sm: 0px 2px 6px 0px hsl(0 0% 0% / 0.15), 0px 1px 2px -1px hsl(0 0% 0% / 0.15);
  --shadow: 0px 2px 6px 0px hsl(0 0% 0% / 0.15), 0px 1px 2px -1px hsl(0 0% 0% / 0.15);
  --shadow-md: 0px 2px 6px 0px hsl(0 0% 0% / 0.15), 0px 2px 4px -1px hsl(0 0% 0% / 0.15);
  --shadow-lg: 0px 2px 6px 0px hsl(0 0% 0% / 0.15), 0px 4px 6px -1px hsl(0 0% 0% / 0.15);
  --shadow-xl: 0px 2px 6px 0px hsl(0 0% 0% / 0.15), 0px 8px 10px -1px hsl(0 0% 0% / 0.15);
  --shadow-2xl: 0px 2px 6px 0px hsl(0 0% 0% / 0.38);
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);

  --font-sans: var(--font-sans);
  --font-mono: var(--font-mono);
  --font-serif: var(--font-serif);
  --font-display: var(--font-display);

  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);

  --shadow-2xs: var(--shadow-2xs);
  --shadow-xs: var(--shadow-xs);
  --shadow-sm: var(--shadow-sm);
  --shadow: var(--shadow);
  --shadow-md: var(--shadow-md);
  --shadow-lg: var(--shadow-lg);
  --shadow-xl: var(--shadow-xl);
  --shadow-2xl: var(--shadow-2xl);

  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
  --tracking-normal: var(--tracking-normal);
  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  html {
    font-size: 115.75%;
  }
  body {
    @apply bg-background text-foreground font-sans;
    letter-spacing: var(--tracking-normal);
  }
}

@keyframes marquee-scroll {
  from { transform: translateX(0); }
  to { transform: translateX(calc(-50% - 8px)); }
}

